--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,6 +1,24 @@
-.layout {
-  height: 80px;
-  background-color: yellow;
-  display: flex;
-  align-items: center;
+.rootLayout {
+  height: 100vh;
+  background: rgb(254, 18, 18);
+  background: linear-gradient(144deg, rgb(255, 132, 0), rgb(255, 176, 91) 100%);
+
+  .layout {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    .layoutLogin {
+      border-radius: 15px;
+      color: white;
+      font-weight: bold;
+    }
+    .layoutRegister {
+      border-radius: 15px;
+      font-weight: 500;
+    }
+  }
 }
