add logo loading

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,7 +1,7 @@
 .rootLayout {
   height: 100vh;
   background: rgb(254, 18, 18);
-  background: linear-gradient(144deg, rgb(255, 132, 0), rgb(255, 176, 91) 100%);
+  background: linear-gradient(144deg, #0b53da, #fc459b);
 
   .layout {
     height: 80px;
