--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -28,8 +28,6 @@
   :global {
     .ant-layout-sider {
       background-color: white;
-      border-top-right-radius: 20px;
-      border-bottom-right-radius: 20px;
       box-shadow: 5px 3px 4px #3333;
     }
     .ant-menu-item:hover {
@@ -63,4 +61,25 @@
       border-left: 3px solid #999;
     }
   }
+}
+
+.menuFolderProject {
+  padding: 1rem 1.8rem 1rem 2.8rem;
+  background: white;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  cursor: pointer;
+  &:hover {
+    background: #f5f5f5;
+  }
+}
+.header {
+  background: white;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  border-left: 1px solid rgb(240, 240, 240);
+  box-shadow: 5px 3px 4px #3333;
 }
