--- a/src/styles/project.module.scss
+++ b/src/styles/project.module.scss
@@ -5,7 +5,7 @@
   margin-bottom: 50px;
   .div_row_content {
     position: absolute;
-    top: -8%;
+    top: -20px;
     left: 3%;
     padding: 2px 20px;
     background-color: #f0f2f5;
@@ -21,6 +21,11 @@
     .name_Project {
       display: block;
       margin-bottom: 10px;
+    }
+    :global {
+      .ant-table-thead > tr > th {
+        background-color: #fff;
+      }
     }
   }
 }
