--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -28,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.ant-table-thead > tr > th {
+  background-color: white;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
