--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -12,6 +12,7 @@
     left: 0;
     right: 0;
     z-index: 1;
+    transition: all 0.6s ease;
     .layoutLogin {
       border-radius: 15px;
       color: white;
