--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,9 @@
   background-color: white;
 }
 .ant-form-item-label
-  > label.ant-form-item-required:not(.ant-form-item-required-mark-optional):before {
+  > label.ant-form-item-required:not(
+    .ant-form-item-required-mark-optional
+  ):before {
   display: none;
 }
 @keyframes App-logo-spin {
