--- a/src/pages/task/task.module.scss
+++ b/src/pages/task/task.module.scss
@@ -30,5 +30,15 @@
     .ant-form-item {
       margin: 0;
     }
+    .ant-table-tbody > tr > td {
+      box-shadow: inset 0px 11px 2px -10px rgb(235, 233, 233),
+        inset 0px -11px 5px -10px rgb(234, 233, 233);
+    }
+  }
+  .taskUserClose {
+    display: none;
+  }
+  .taskUser:hover .taskUserClose {
+    display: block;
   }
 }
